--- a/src/app/app.html
+++ b/src/app/app.html
@@ -5,5 +5,11 @@
     <a href="https://angular-university.io">angular-university.io</a>
   </div>
 
-  <todos-list />
+  @if (!store.loading()) {
+      <todos-list />
+  } 
+  @else {
+    <mat-spinner />
+  }
+
 </div>
