--- a/src/app/todos-list/todos-list.html
+++ b/src/app/todos-list/todos-list.html
@@ -6,19 +6,19 @@
     <mat-icon matSuffix>edit</mat-icon>
 </mat-form-field>
 
-<mat-button-toggle-group #filter>
+<mat-button-toggle-group #filter (change)="onFilterTodos($event)">
     <mat-button-toggle value="all">All</mat-button-toggle>
     <mat-button-toggle value="pending">Pending</mat-button-toggle>
     <mat-button-toggle value="completed">Completed</mat-button-toggle>
 </mat-button-toggle-group>
 
 <mat-selection-list class="todos-list">
-    @for(todo of store.todos(); track todo.id; let index = $index) {
-        <mat-list-option>
-            <div class="todo-idem">
-                <mat-icon class="delete-todo" (click)="onDeleteTodo(todo.id, $event)">delete</mat-icon>
-                <span>{{todo.title}}</span>
-            </div>
-        </mat-list-option>
+    @for(todo of store.filteredTodos(); track todo.id; let index = $index) {
+    <mat-list-option [selected]="todo.completed" (selectedChange)="onTodoToggled(todo.id, $event)">
+        <div class="todo-idem">
+            <mat-icon class="delete-todo" (click)="onDeleteTodo(todo.id, $event)">delete</mat-icon>
+            <span [ngStyle]="{'text-decoration': todo.completed ? 'line-through' : 'none'}">{{todo.title}}</span>
+        </div>
+    </mat-list-option>
     }
 </mat-selection-list>
